//
//  Languages.swift
//  Baluchon
//
//  Created by fred on 03/01/2022.
//

import Foundation

struct Language {
    
    let name: String
    let codeISO: String

}

var languages = [
    Language(name: "Allemand", codeISO: "de"),
    Language(name: "Anglais", codeISO: "en"),
    Language(name: "Bulgare", codeISO: "bg"),
    Language(name: "Croate", codeISO: "hr"),
    Language(name: "Danois", codeISO: "da"),
    Language(name: "Espagnol", codeISO: "es"),
    Language(name: "Espéranto", codeISO: "eo"),
    Language(name: "Estonien", codeISO: "et"),
    Language(name: "Finnois", codeISO: "fi"),
    Language(name: "Français", codeISO: "fr"),
    Language(name: "Grec", codeISO: "el"),
    Language(name: "Hébreu", codeISO: "he"),
    Language(name: "Hongrois", codeISO: "hu"),
    Language(name: "Irlandais", codeISO: "ga"),
    Language(name: "Italien", codeISO: "it"),
    Language(name: "Letton", codeISO: "lv"),
    Language(name: "Lituanien", codeISO: "lt"),
    Language(name: "Luxembourgeois", codeISO: "lb"),
    Language(name: "Maltais", codeISO: "mt"),
    Language(name: "Néerlandais", codeISO: "nl"),
    Language(name: "Polonais", codeISO: "pl"),
    Language(name: "Portuguais", codeISO: "pt"),
    Language(name: "Tchèque", codeISO: "cs"),
    Language(name: "Roumain", codeISO: "ro"),
    Language(name: "Slovaque", codeISO: "sk"),
    Language(name: "Slovène", codeISO: "sl"),
    Language(name: "Suédois", codeISO: "sv")
]
