...
    </dependencies>
    <scenes>
        <!--TranslateController-->
        <scene sceneID="wyg-fe-F5m">
            <objects>
                <viewControllerPlaceholder storyboardName="TranslateController" id="k24-0U-K5o" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Traduction" id="fiW-sN-ny5">
                        <color key="badgeColor" systemColor="labelColor"/>
                    </tabBarItem>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="y0k-ec-ceJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-1191" y="514"/>
...
